--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 the most influential changemakers who are committed to advancing positive change for a more equitable
                 world. </p>
             <a class="expore" href="https://facebook.com/sas0019" target="_blank">Explore now</a>
-            <p style="padding-top: 5%;"> scroll dowmto explore more about us</p>
+            <p style="padding-top: 5%;"> scroll down to explore more about us</p>
         </div>
         <div class="img-a" class="hlaf-with">
             <img src="imges/Adobe_Express_20221120_1542470_1.png" alt="">
